force-app/main/default/objects/Inventory_Sales_Report__c/Inventory_Sales_Report__c.object-meta.xml
<CustomObject>
    <description>库存销量报表</description>
    <label>Inventory Sales Report</label>
    <nameField>
        <label>Inventory Sales Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Sales Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>