force-app/main/default/objects/Inventory_Sales_Report__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel</label>
    <referenceTo>Channel__c</referenceTo>
    <relationshipLabel>Inventory Sales Reports</relationshipLabel>
    <relationshipName>Inventory_Sales_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>