force-app/main/default/objects/Inventory_Sales_Report__c/fields/Channel_Name__c.field-meta.xml
<CustomField>
    <fullName>Channel_Name__c</fullName>
    <formula>Store__r.Account__r.Name</formula>
    <label>Channel Name</label>
    <type>Text</type>
</CustomField>