force-app/main/default/objects/Inventory_Sales_Report__c/fields/Days_of_support__c.field-meta.xml
<CustomField>
    <fullName>Days_of_support__c</fullName>
    <label>Days of support</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>