force-app/main/default/objects/Inventory_Sales_Report__c/fields/MTD_Sales__c.field-meta.xml
<CustomField>
    <fullName>MTD_Sales__c</fullName>
    <label>MTD Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>