force-app/main/default/objects/Inventory_Sales_Report__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <length>50</length>
    <type>Text</type>
</CustomField>