force-app/main/default/objects/Inventory_Sales_Report__c/fields/Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region__c</fullName>
    <formula>Text(Store__r.Sales_Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Region</label>
    <type>Text</type>
</CustomField>