force-app/main/default/objects/Inventory_Sales_Report__c/fields/Sales_volume__c.field-meta.xml
<CustomField>
    <fullName>Sales_volume__c</fullName>
    <label>Sales volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>