force-app/main/default/objects/Inventory_Sales_Report__c/fields/Stock_in_transit__c.field-meta.xml
<CustomField>
    <fullName>Stock_in_transit__c</fullName>
    <label>Stock in transit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>