force-app/main/default/objects/Inventory_Sales_Report__c/fields/Stock_status__c.field-meta.xml
<CustomField>
    <fullName>Stock_status__c</fullName>
    <label>Stock status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>