force-app/main/default/objects/Inventory_Sales_Report__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>Inventory Sales Reports</relationshipLabel>
    <relationshipName>Inventory_Sales_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>