force-app/main/default/objects/Inventory_Sales_Report__c/fields/Unavailable_stock__c.field-meta.xml
<CustomField>
    <fullName>Unavailable_stock__c</fullName>
    <label>Unavailable stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>